--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+    <!-- header section -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--navigation bar-->
         <nav>
             <ul>
                 <li>
@@ -24,9 +26,11 @@
             </ul>
         </nav>
     </header>
+    <!--hero section -->
     <section class="hero"></section>
+    <!--content section -->
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Drawing in notebook of the letters SEO, surrounded by the words and icons for: content, headings, mobile compatibility, social media, link building, backlink.
             "/>
             <h2>Search Engine Optimization</h2>
@@ -49,22 +53,23 @@
             </p>
         </article>
     </section>
+    <!-- benefits section -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div id="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div id="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div id="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -72,6 +77,7 @@
             </p>
         </div>
     </aside>
+    <!--footer section -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
